# aa

./: Android.bp  CLAUDE.md  CMakeLists.txt  aauto.mk  main.cpp
app/android/jni/: aauto_jni.cpp
app/android/permissions/: privapp-permissions-com.aauto.app.xml
app/android/src/main/: AndroidManifest.xml
app/android/src/main/java/com/aauto/app/: AaDisplayActivity.java  BootReceiver.java  BuildInfo.java  MainActivity.java  SessionState.java
app/android/src/main/java/com/aauto/app/core/: AaSessionService.java
app/android/src/main/java/com/aauto/app/location/: LocationSimulator.java
app/android/src/main/java/com/aauto/app/media/: JavaAudioOutput.java  JavaVideoOutput.java
app/android/src/main/java/com/aauto/app/usb/: UsbAccessoryManager.java  UsbMonitorService.java
app/android/src/main/java/com/aauto/app/wireless/: BluetoothWirelessManager.java  BtProfileGate.java  WirelessMonitorService.java
app/android/src/main/res/layout/: activity_device_list.xml  activity_main.xml  item_device.xml
app/android/src/main/res/values/: strings.xml
app/android/src/main/res/xml/: device_filter.xml
app/linux/: CMakeLists.txt  main.cpp
app/macos/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/aauto/core/: AAutoEngine.hpp  HeadunitConfig.hpp
core/include/aauto/crypto/: AapKeys.hpp  CryptoManager.hpp
core/include/aauto/platform/: IAudioOutput.hpp  IPlatform.hpp  IVideoOutput.hpp
core/include/aauto/service/: AudioService.hpp  AudioSink.hpp  BluetoothService.hpp  ControlService.hpp  IService.hpp  InputService.hpp  MicrophoneService.hpp  SensorService.hpp  ServiceBase.hpp  ServiceComposition.hpp  ServiceFactory.hpp  VideoService.hpp  VideoSink.hpp
core/include/aauto/session/: AapHandshaker.hpp  AapProtocol.hpp  MessageFramer.hpp  PhoneInfo.hpp  ServiceRegistry.hpp  Session.hpp
core/include/aauto/transport/: ITransport.hpp
core/include/aauto/utils/: Logger.hpp  ProtocolUtil.hpp
core/src/core/: AAutoEngine.cpp
core/src/crypto/: AapKeys.cpp  CryptoManager.cpp
core/src/service/: AudioService.cpp  BluetoothService.cpp  ControlService.cpp  InputService.cpp  MicrophoneService.cpp  SensorService.cpp  ServiceBase.cpp  ServiceFactory.cpp  VideoService.cpp
core/src/session/: AapHandshaker.cpp  MessageFramer.cpp  Session.cpp  SessionBuilder.cpp
core/src/utils/: Logger.cpp
docs/: architecture_review.md
docs/plans/: 0001_p1_compare.md  0002_app_driven_services.md  0003_wireless_lifecycle.md  0004_send_queue.md  0005_wireless_lifecycle_v2.md
impl/android/: CMakeLists.txt
impl/android/include/aauto/output/: MediaCodecVideoSink.hpp  OpenSLAudioSink.hpp
impl/android/include/aauto/platform/android/: AndroidPlatform.hpp  JavaAudioOutput.hpp  JavaVideoOutput.hpp  NativeAudioOutput.hpp  NativeVideoOutput.hpp
impl/android/include/aauto/transport/android/: AndroidUsbTransport.hpp  TcpTransport.hpp
impl/android/src/output/: MediaCodecVideoSink.cpp  OpenSLAudioSink.cpp
impl/android/src/platform/android/: AndroidPlatform.cpp  JavaAudioOutput.cpp  JavaVideoOutput.cpp  NativeAudioOutput.cpp  NativeVideoOutput.cpp
impl/android/src/transport/android/: AndroidUsbTransport.cpp  TcpTransport.cpp
impl/common/: CMakeLists.txt
impl/common/include/aauto/hw/: IDeviceDetector.hpp  UsbDeviceDetector.hpp
impl/common/include/aauto/transport/: UsbTransport.hpp
impl/common/src/hw/: UsbDeviceDetector.cpp
impl/common/src/transport/: UsbTransport.cpp
impl/common/src/video/: VideoDecoder.cpp
impl/linux/: CMakeLists.txt
impl/linux/include/aauto/hw/: IDeviceDetector.hpp
impl/linux/include/aauto/platform/alsa/: AlsaAudioOutput.hpp
impl/linux/include/aauto/platform/qt/: GlVideoWidget.hpp  GstAudioOutput.hpp  GstVideoOutput.hpp  QtPlatform.hpp
impl/linux/src/platform/alsa/: AlsaAudioOutput.cpp
impl/linux/src/platform/qt/: GlVideoWidget.cpp  GstAudioOutput.cpp  GstVideoOutput.cpp  QtPlatform.cpp
impl/linux/src/transport/: UsbTransport.cpp
impl/macos/: CMakeLists.txt
impl/macos/include/aauto/platform/sdl2/: Sdl2AudioOutput.hpp  Sdl2Platform.hpp  Sdl2VideoOutput.hpp
impl/macos/src/platform/sdl2/: Sdl2AudioOutput.cpp  Sdl2Platform.cpp  Sdl2VideoOutput.cpp
include/aauto/core/: AAutoEngine.hpp  DeviceManager.hpp
include/aauto/crypto/: AapKeys.hpp  CryptoManager.hpp
include/aauto/hw/: UsbDeviceDetector.hpp
include/aauto/platform/: IPlatform.hpp  IVideoOutput.hpp
include/aauto/platform/sdl2/: Sdl2AudioOutput.hpp  Sdl2Platform.hpp  Sdl2VideoOutput.hpp
include/aauto/service/: AudioService.hpp  BluetoothService.hpp  ControlService.hpp  IService.hpp  InputService.hpp  MicrophoneService.hpp  SensorService.hpp  ServiceBase.hpp  ServiceFactory.hpp  VideoService.hpp
include/aauto/session/: AapHandshaker.hpp  AapProtocol.hpp  ServiceRegistry.hpp  Session.hpp  SessionBuilder.hpp
include/aauto/transport/: ITransport.hpp  UsbTransport.hpp
include/aauto/utils/: Logger.hpp
include/aauto/video/: VideoDecoder.hpp  VideoRenderer.hpp
protobuf/: CMakeLists.txt
src/core/: AAutoEngine.cpp  DeviceManager.cpp
src/crypto/: CryptoManager.cpp
src/hw/: UsbDeviceDetector.cpp
src/platform/sdl2/: Sdl2AudioOutput.cpp  Sdl2Platform.cpp  Sdl2VideoOutput.cpp
src/service/: AudioService.cpp  BluetoothService.cpp  ControlService.cpp  InputService.cpp  MicrophoneService.cpp  SensorService.cpp  ServiceBase.cpp  ServiceFactory.cpp  VideoService.cpp
src/session/: AapHandshaker.cpp  MessageFramer.cpp  ServiceRegistry.cpp  Session.cpp
src/transport/: UsbTransport.cpp
src/utils/: Logger.cpp
src/video/: VideoDecoder.cpp  VideoRenderer.cpp
