cmake_minimum_required(VERSION 3.10)
project(AAutoFramework)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_subdirectory(protobuf)
add_subdirectory(core)

if(ANDROID)
    add_subdirectory(impl/android)
elseif(APPLE)
    add_subdirectory(impl/common)
    add_subdirectory(impl/macos)
    add_subdirectory(app/macos)
else()
    add_subdirectory(impl/common)
    add_subdirectory(impl/linux)
    add_subdirectory(app/linux)
endif()
